# bloch-simulator-python

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
bloch/: __init__.py  bloch.py  bloch_processing.py  bloch_simulator.c  rf_seq.py  viz.py
bloch/tests/: test_bloch.py  test_gradient_area.py  test_pulse_sequence_design.py  test_rf_seq.py
