[build-system]
requires = ["setuptools>=64", "wheel", "numpy>=1.22"]
build-backend = "setuptools.build_meta"

[project]
name = "bloch-simulator-library"
version = "3.0"
description = "Bloch Simulator and helper modules (C extension)."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Jon Tamir and Niraj Amalkant", email = "jtamir@utexas.edu" },
]
dependencies = [
  "numpy>=1.22",
  "scipy>=1.9",
  "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/utcsilab/bloch-simulator-python"


[tool.setuptools.packages.find]
where = ["."]
include = ["bloch*"]
